# devtools-frontend

./: .clang-format  .editorconfig  .eslintignore  .eslintrc-typescript.js  .eslintrc.js  .git-blame-ignore-revs  .gitallowed  .gitignore  .gitmodules  .gn  .npmrc  .python-version  .stylelintignore  .stylelintrc.json  ARCHITECTURE.md  AUTHORS  BUILD.gn  COMMON_OWNERS  DEPS  DESIGN_GUIDELINES.md  ENG_REVIEW_OWNERS  INFRA_OWNERS  OWNERS  OWNERS.new  PRESUBMIT.py  Profile-20221128T132424.json  Profile-20230509T154753.json  README.md  WATCHLISTS  aaa.json  all_devtools_files.gni  all_devtools_modules.gni  buildbucket.config  chumpdetector.config  commit-queue.cfg  copy.bara.sky  cr-buildbucket.cfg  dark_mode_tracker.csv  dark_mode_work.csv  definitions.star  (+30 more)
back_end/CXXDWARFSymbols/: CMakeLists.txt  README.md
build_overrides/: BUILDCONFIG.gn  build.gni
front_end/: .eslintrc.js  BUILD.gn  README.md  Runtime.js  RuntimeInstantiator.js  Tests.js  audits_worker.unbundled.js  devtools_app-meta-files.ts  devtools_app.html  devtools_app.js  devtools_app.json  devtools_compatibility.js  entrypoint_template.html  externs.js  formatter_worker.unbundled.js  formatter_worker_entrypoint.js  formatter_worker_entrypoint.json  heap_snapshot_worker.unbundled.js  heap_snapshot_worker_entrypoint.js  heap_snapshot_worker_entrypoint.json  inspector.html  integration_test_runner.html  integration_test_runner.js  integration_test_runner.ts  modulepreload_all.html  modulepreload_fcp.html  node_app.js  rollup.config.js  root.js  shell-meta-files.ts  shell.js  shell.json  subresource_wbn.html  toolbox.json  verification.ts  wasmparser_worker.js  web_audio_worker.js  web_audio_worker.json  web_audio_worker.unbundled.js  web_audio_worker_entrypoint.js  (+5 more)
front_end/Images/: BUILD.gn  generate-css-vars.js  readme.md  rollup.config.js  whatsnew.avif
front_end/accessibility/: ARIAAttributesView.js  ARIAAttributesView.ts  ARIAMetadata.js  ARIAMetadata.ts  AXBreadcrumbsPane.js  AXBreadcrumbsPane.ts  AccessibilityModel.js  AccessibilityNodeView.js  AccessibilityNodeView.ts  AccessibilitySidebarView.js  AccessibilitySidebarView.ts  AccessibilityStrings.js  AccessibilityStrings.ts  AccessibilitySubPane.js  AccessibilitySubPane.ts  BUILD.gn  SourceOrderView.js  SourceOrderView.ts  accessibility-legacy.js  accessibility-meta.ts  accessibility.js  accessibilityNode.css  accessibilityProperties.css  accessibility_strings.grdp  axBreadcrumbs.css  module.json  moduleUIStrings.js
front_end/accessibility_test_runner/: accessibility_test_runner.js  module.json
front_end/animation/: AnimationGroupPreviewUI.ts  AnimationModel.js  AnimationModel.ts  AnimationTimeline.js  AnimationTimeline.ts  AnimationUI.js  AnimationUI.ts  ModuleUIStrings.ts  animation-meta.ts  animationTimeline.css  animation_strings.grdp
front_end/application_test_runner/: IndexedDBTestRunner.js  ResourcesTestRunner.js  ServiceWorkersTestRunner.js  application_test_runner.js  module.json
front_end/audits/: AuditsController.js  AuditsPanel.js  AuditsReportRenderer.js  AuditsStartView.js  AuditsStatusView.js  audits-legacy.js  audits.js  auditsStartView.css  audits_strings.grdp  module.json
front_end/audits_test_runner/: AuditsTestRunner.js
front_end/audits_worker/: AuditsService.js  audits_worker.js  module.json
front_end/axe_core_test_runner/: axe_core_test_runner.js  module.json
front_end/bindings/: BUILD.gn  BlackboxManager.js  BreakpointManager.js  BreakpointManager.ts  CSSWorkspaceBinding.js  CSSWorkspaceBinding.ts  CompilerScriptMapping.js  CompilerScriptMapping.ts  ContentProviderBasedProject.js  ContentProviderBasedProject.ts  DebuggerLanguagePlugins.js  DebuggerLanguagePlugins.ts  DebuggerWorkspaceBinding.js  DebuggerWorkspaceBinding.ts  DefaultScriptMapping.js  DefaultScriptMapping.ts  FileUtils.js  FileUtils.ts  IgnoreListManager.ts  LiveLocation.js  LiveLocation.ts  NetworkProject.js  NetworkProject.ts  PresentationConsoleMessageHelper.js  PresentationConsoleMessageHelper.ts  ResourceMapping.js  ResourceMapping.ts  ResourceScriptMapping.js  ResourceScriptMapping.ts  ResourceUtils.js  ResourceUtils.ts  SASSSourceMapping.js  SASSSourceMapping.ts  SourceURLResolver.ts  StylesSourceMapping.js  StylesSourceMapping.ts  TempFile.ts  bindings-legacy.js  bindings.js  bindings_strings.grdp  (+1 more)
front_end/bindings_test_runner/: AutomappingTestRunner.js  BindingsTestRunner.js  IsolatedFilesystemTestRunner.js  OverridesTestRunner.js  bindings_test_runner.js  module.json
front_end/browser_debugger/: BUILD.gn  CSPViolationBreakpointsSidebarPane.js  CSPViolationBreakpointsSidebarPane.ts  CategorizedBreakpointsSidebarPane.js  CategorizedBreakpointsSidebarPane.ts  DOMBreakpointsSidebarPane.js  DOMBreakpointsSidebarPane.ts  EventListenerBreakpointsSidebarPane.js  EventListenerBreakpointsSidebarPane.ts  ModuleUIStrings.js  ObjectEventListenersSidebarPane.js  ObjectEventListenersSidebarPane.ts  XHRBreakpointsSidebarPane.js  XHRBreakpointsSidebarPane.ts  browser_debugger-legacy.js  browser_debugger-meta.ts  browser_debugger_strings.grdp  categorizedBreakpointsSidebarPane.css  domBreakpointsSidebarPane.css  eventListenerBreakpoints.css  module.json  xhrBreakpointsSidebarPane.css
front_end/browser_sdk/: BUILD.gn  ContrastCheckTrigger.js  ContrastCheckTrigger.ts  FrameManager.js  IssuesManager.js  IssuesManager.ts  LogManager.js  LogManager.ts  MarkdownHelpers.ts  ModuleUIStrings.js  ModuleUIStrings.ts  PresentationIssueMessageHelper.js  RelatedIssue.js  RelatedIssue.ts  SourceFrameIssuesManager.ts  browser_sdk-legacy.js  browser_sdk-meta.ts  browser_sdk.js  module.json
front_end/changes/: BUILD.gn  ChangesHighlighter.js  ChangesSidebar.js  ChangesSidebar.ts  ChangesTextEditor.js  ChangesTextEditor.ts  ChangesView.js  ChangesView.ts  ModuleUIStrings.ts  changes-legacy.js  changes-meta.ts  changes.js  changesSidebar.css  changesView.css  changes_strings.grdp  module.json
front_end/client_variations/: BUILD.gn  client_variations.js  format_client_variations.js
front_end/cm/: cm.js  codemirror.css  codemirror.js
front_end/cm_headless/: module.json
(+6502 files in other folders)
