# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
import("../scripts/build/grd_file_group.gni")

group("front_end") {
  public_deps = [ ":front_end_html_entrypoints" ]
}

copy("front_end_html_entrypoints") {
  sources = [
    "devtools_app.html",
    "inspector.html",
    "integration_test_runner.html",
    "js_app.html",
    "ndb_app.html",
    "node_app.html",
    "toolbox.html",
    "worker_app.html",
  ]

  outputs = [ "$resources_out_dir/{{source_file_part}}" ]
}

grd_file_group("front_end_file_group") {
  deps = [ ":front_end_html_entrypoints" ]
}
