# Copyright 2019 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../third_party/typescript/typescript.gni")

group("common") {
  public_deps = [
    ":trie",
    ":event_target",
  ]
}

ts_library("trie") {
  sources = [
    "Trie.js",
  ]
}

ts_library("event_target") {
  sources = [
    "EventTarget.js",
  ]
}
