# Copyright 2019 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../third_party/typescript/typescript.gni")

ts_library("common") {
  deps = [
    ":app",
    ":app_provider",
    ":color",
    ":query_param_handler",
    ":runnable",
    ":string_output_stream",
    ":trie",
  ]
}

ts_library("app") {
  sources = [ "App.js" ]
}

ts_library("app_provider") {
  sources = [ "AppProvider.js" ]

  deps = [ ":app" ]
}

ts_library("color") {
  sources = [ "Color.js" ]

  deps = [ "../platform" ]
}

ts_library("query_param_handler") {
  sources = [ "QueryParamHandler.js" ]
}

ts_library("runnable") {
  sources = [ "Runnable.js" ]
}

ts_library("string_output_stream") {
  sources = [ "StringOutputStream.js" ]
}

ts_library("trie") {
  sources = [ "Trie.js" ]
}
