# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../scripts/build/copy_to_gen.gni")

copy_to_gen("component_docs") {
  sources = [
    "elements_breadcrumbs/basic.html",
    "elements_breadcrumbs/scroll.html",
    "example/basic.html",
  ]

  deps = [ "../elements" ]
}
