import("../../third_party/typescript/typescript.gni")

ts_library("elements") {
  deps = [
    ":breadcrumbs",
    ":piechart",
  ]
}

ts_library("breadcrumbs") {
  deps = []

  sources = [
    "ElementsBreadcrumbs.ts",
    "ElementsBreadcrumbsUtils.ts",
    "ElementsBreadcrumbs_bridge.js",
  ]
}

ts_library("piechart") {
  deps = []

  sources = [
    "PieChart2.ts",
  ]
}
