# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../scripts/build/ninja/devtools_entrypoint.gni")
import("../../scripts/build/ninja/devtools_module.gni")

devtools_module("i18n") {
  sources = [
    "i18n-lh-bundle.ts",
    "i18nImpl.ts",
  ]

  deps = [
    "../platform",
    "../third_party/i18n/:bundle_i18n",
  ]
}

devtools_entrypoint("bundle") {
  entrypoint = "i18n.js"
  is_legacy_javascript_entrypoint = [ "crbug.com/1011811" ]
  deps = [ ":i18n" ]
}
