# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../scripts/build/ninja/devtools_entrypoint.gni")
import("../../scripts/build/ninja/devtools_module.gni")

devtools_module("mock_environment") {
  sources = [ "setup_environment.ts" ]

  deps = [
    "../common:bundle",
    "../host:bundle",
    "../i18n:bundle",
    "../root:bundle",
    "../sdk:bundle",
    "../ui:bundle",
  ]
}
devtools_entrypoint("bundle") {
  entrypoint = "mock_environment.ts"
  deps = [ ":mock_environment" ]
}
