# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../scripts/build/ninja/devtools_entrypoint.gni")

devtools_entrypoint("bundle") {
  entrypoint = "test_runner.js"

  deps = [ "../legacy_test_runner/test_runner:bundle" ]
}
