# Copyright 2019 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../third_party/typescript/typescript.gni")

ts_library("ui") {
  deps = [
    ":context_flavor_listener",
  ]
}

ts_library("context_flavor_listener") {
  sources = [ "ContextFlavorListener.js" ]
}
