# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../scripts/build/ninja/devtools_entrypoint.gni")
import("../../scripts/build/ninja/devtools_module.gni")

devtools_module("web_audio") {
  sources = [
    "./graph_visualizer/EdgeView.js",
    "./graph_visualizer/GraphManager.js",
    "./graph_visualizer/GraphStyle.js",
    "./graph_visualizer/GraphView.js",
    "./graph_visualizer/NodeRendererUtility.js",
    "./graph_visualizer/NodeView.js",
    "AudioContextContentBuilder.js",
    "AudioContextSelector.js",
    "WebAudioModel.js",
    "WebAudioView.js",
  ]

  deps = [
    "../common:bundle",
    "../sdk:bundle",
    "../ui:bundle",
  ]
}

devtools_entrypoint("bundle") {
  entrypoint = "web_audio.js"
  is_legacy_javascript_entrypoint = [ "crbug.com/1011811" ]

  deps = [ ":web_audio" ]
}
