import("../../scripts/build/ninja/copy.gni")

# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("unittests") {
  deps = [
    ":copy_karma_conf",
    "./front_end",
  ]
}

copy("copy_karma_conf") {
  sources = [ "karma.conf.js" ]
  outputs = [ "$target_gen_dir/karma.conf.js" ]
}
