# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../../scripts/build/ninja/copy.gni")

copy_to_gen("elements_style_sidebar") {
  sources = [
    "basic.html",
    "demo-styles.css",
    "horizontal_overflow.html",
    "keyboard.html",
    "multiple.html",
    "vertical_overflow.html",
  ]

  deps = [ "../../elements" ]
}
