# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
import("../../../scripts/build/ninja/vars.gni")

devtools_emulated_devices_images = [
  "surface-duo-vertical.avif",
  "surface-pro-7-vertical.avif",
  "surface-pro-7-horizontal.avif",
  "iphone-xr-horizontal.avif",
  "surface-duo-horizontal.avif",
  "samsung-s9-plus-horizontal.avif",
  "samsung-z-fold-vertical.avif",
  "samsung-s8-plus-horizontal.avif",
  "iphone-xr-vertical.avif",
  "samsung-s9-plus-vertical.avif",
  "samsung-s8-plus-vertical.avif",
  "pixel-3-xl-horizontal.avif",
  "samsung-z-fold-horizontal.avif",
  "pixel-5-horizontal.avif",
  "samsung-s20-ultra-vertical.avif",
  "samsung-a51-vertical.avif",
  "pixel-6-horizontal.avif",
  "samsung-a51-horizontal.avif",
  "samsung-s20-ultra-horizontal.avif",
  "pixel-6-vertical.avif",
  "iphone-se-horizontal.avif",
  "iphone-12-pro-horizontal.avif",
  "pixel-5-vertical.avif",
  "pixel-3-xl-vertical.avif",
  "iphone-12-pro-max-horizontal.avif",
  "iphone-se-vertical.avif",
  "iphone-12-pro-max-vertical.avif",
  "iphone-12-pro-vertical.avif",
  "google-nest-hub-max-horizontal.avif",
  "ipad-pro-13-vertical.avif",
  "ipad-pro-13-horizontal.avif",
  "google-nest-hub-horizontal.avif",
  "ipad-pro-11-vertical.avif",
  "ipad-pro-11-horizontal.avif",
  "ipad-air-horizontal.avif",
  "ipad-air-vertical.avif",
  "ipad-mini-vertical.avif",
  "ipad-mini-horizontal.avif",
  "google-nexus-5-horizontal-default-1x.avif",
  "google-nexus-5-horizontal-default-2x.avif",
  "google-nexus-5-horizontal-keyboard-1x.avif",
  "google-nexus-5-horizontal-keyboard-2x.avif",
  "google-nexus-5-horizontal-navigation-1x.avif",
  "google-nexus-5-horizontal-navigation-2x.avif",
  "google-nexus-5-vertical-default-1x.avif",
  "google-nexus-5-vertical-default-2x.avif",
  "google-nexus-5-vertical-keyboard-1x.avif",
  "google-nexus-5-vertical-keyboard-2x.avif",
  "google-nexus-5-vertical-navigation-1x.avif",
  "google-nexus-5-vertical-navigation-2x.avif",
  "google-nexus-5x-horizontal-default-1x.avif",
  "google-nexus-5x-horizontal-default-2x.avif",
  "google-nexus-5x-horizontal-keyboard-1x.avif",
  "google-nexus-5x-horizontal-keyboard-2x.avif",
  "google-nexus-5x-horizontal-navigation-1x.avif",
  "google-nexus-5x-horizontal-navigation-2x.avif",
  "google-nexus-5x-vertical-default-1x.avif",
  "google-nexus-5x-vertical-default-2x.avif",
  "google-nexus-5x-vertical-keyboard-1x.avif",
  "google-nexus-5x-vertical-keyboard-2x.avif",
  "google-nexus-5x-vertical-navigation-1x.avif",
  "google-nexus-5x-vertical-navigation-2x.avif",
  "iPad-landscape.avif",
  "iPad-portrait.avif",
  "iPhone5-landscape.avif",
  "iPhone5-portrait.avif",
  "iPhone6-landscape.avif",
  "iPhone6-portrait.avif",
  "iPhone6Plus-landscape.avif",
  "iPhone6Plus-portrait.avif",
  "MotoG4-landscape.avif",
  "MotoG4-portrait.avif",
  "Nexus5X-landscape.avif",
  "Nexus5X-portrait.avif",
  "Nexus6P-landscape.avif",
  "Nexus6P-portrait.avif",
]

optimized_emulated_device_images = []

foreach(image, devtools_emulated_devices_images) {
  optimized_emulated_device_images += [ "emulated_devices/optimized/$image" ]
}
