# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../../third_party/typescript/typescript.gni")

ts_library("devtools-key-value-table") {
  sources = [ "devtools-key-value-table.ts" ]

  deps = [ "../../third_party/lit-html" ]
}
